starting a more stripped down version, with tweaks to the about page

--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 ---
 layout: default
-title: Info
+title: About
 ---
 
-<h1>I am a <strike>[typographic/interaction/product]</strike> designer in San Francisco.</h1>
+<h1>I am a <!--[typographic/web/interaction/mobile/product]--><strike>typographic</strike>, <strike>web</strike>, <strike>interaction</strike>, <strike>mobile</strike>, <strike>product</strike> designer living and working in San Francisco, California.</h1>
+
+
 
 <p>I am the Principal Designer at <a href="http://twitter.com">Twitter</a> where I lead the design of key initiatives across the Twitter product. I am also an Advisor/Mentor at <a href="http://designerfund.com/">The Designer Fund</a>, whose mission is to invest in designers who create businesses with positive social impact. I am the co-creator <a href="http://52weeksofux.com">52 Weeks of UX</a>, an online resource created to provide “discourse on the process of designing for real people.”</p>
 
