--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@ title: Testing the title
 ---
 
 <div class="content">
-  <div class="shapes">
+  <!--div class="shapes">
     <span>&#9642;</span>
     <span>&#9652;</span>
     <span>&#9679;</span>
-  </div>
-  <p>Some pithy phrase.</p>
-  <p>Or maybe some cool grid thing.</p>
+  </div-->
 
   {% assign first_post = site.posts.first %}
   <article>
